<resources>
    <string name="app_name">Pokemon GO Clone</string>

    <!-- Strings da tela de início (splash) -->
    <string name="disclaimer">Adaptação do jogo original - INF311</string>

    <!-- Strings das telas de login e cadastro -->
    <string name="texto_nome">Nome:</string>
    <string name="texto_usuario">Usuário:</string>
    <string name="texto_senha">Senha:</string>
    <string name="texto_confirmacao_senha">Confirmação da senha:</string>
    <string name="texto_genero">Sexo:</string>
    <string name="texto_feminino">Feminino</string>
    <string name="texto_masculino">Masculino</string>
    <string name="texto_login">Login</string>
    <string name="texto_cadastrar">Cadastrar</string>

    <!-- Strings dos erros da tela de Login e Cadastro -->
    <string name="erro_campo_obrigatório">Campo obrigatório.</string>
    <string name="erro_usuario_inexistente">Usuário não existe.</string>
    <string name="erro_senha_incorreta">Senha incorreta.</string>
    <string name="erro_senha_invalida">Senha deve ter pelo menos 6 caracteres.</string>
    <string name="erro_senhas_iguais">Repita a senha corretamente.</string>
    <string name="erro_usuario_existente">Nome de usuário já existe.</string>

    <!-- String da tela de mapa -->
    <string name="title_activity_maps">Map</string>

    <!-- String da tela de perfil -->
    <string name="texto_inicio_aventura">Início da aventura:</string>
    <string name="texto_num_capturas">Número de capturas:</string>
    <string name="texto_logout">Logout</string>
</resources>
