<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amandafsilva.pokemongoclone.CadastroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pallet" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <GridLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/container_layout"
        android:orientation="vertical"
        android:paddingBottom="7dp"
        android:id="@+id/gridLayout">

        <TextView
            android:id="@+id/textView_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_nome"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_usuario"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_senha"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView_ConfirmacaoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_confirmacao_senha"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_ConfirmacaoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView_Genero"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/texto_genero"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton_Feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_feminino" />

                <RadioButton
                    android:id="@+id/radioButton_Masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_masculino" />
            </RadioGroup>

            <Button
                android:id="@+id/button_Cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_layout"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/texto_cadastrar"
                android:textColor="#CCFFFFFF"
                android:textStyle="bold" />
        </RelativeLayout>

    </GridLayout>

</RelativeLayout>
