<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="amandafsilva.pokemongoclone.PerfilActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/pToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView_TituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pToolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="username"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_FotoPerfil"
        android:layout_width="180dp"
        android:layout_height="220dp"
        app:srcCompat="@drawable/female_grande"
        android:layout_below="@+id/textView_TituloPerfil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textView_InicioAventura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_FotoPerfil"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="17dp"
        android:text="@string/texto_inicio_aventura"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_DataInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_InicioAventura"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/textView_NumCapturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_DataInicio"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:text="@string/texto_num_capturas"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_QtdePokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/textView_NumCapturas"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_layout"
        android:onClick="logout"
        android:text="@string/texto_logout"
        android:textColor="#CCFFFFFF"
        android:textStyle="bold"
        android:layout_below="@+id/textView_QtdePokemon"
        android:layout_alignEnd="@+id/textView_InicioAventura" />

</RelativeLayout>
